# trading-bot-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  prepare.sh
.github/workflows/: cpp-build-and-test.yml
app/: CMakeLists.txt  main.cpp
dev/: Makefile  build_Makefile  docker-compose.yml
docker/: Dockerfile.dev
include/features/: ema_feature.h  feature.h
include/fitter/: fitter.h
include/helpers/: multidim_vector.h  vector_view.h
include/markets/: backtest_market.h  dummy_market.h  market.h
include/plotting/: plotting.h
include/strategies/: autofit_strategy.h  dummy_strategy.h  macd_strategy.h  strategy.h
include/trading_bot/: backtesting.h
research/: research.ipynb
src/: CMakeLists.txt  backtest_market.cpp  backtesting.cpp  dummy_market.cpp  dummy_strategy.cpp  ema_feature.cpp  fitter.cpp  macd_strategy.cpp  market.cpp  multidim_vector.cpp  plotting.cpp  strategy.cpp
src/features/: CMakeLists.txt  atr_feature.cpp  atr_feature.h  bollinger_bands_feature.cpp  bollinger_bands_feature.h  ema_feature.cpp  ema_feature.h  feature.h  sma_feature.cpp  sma_feature.h
src/features/tests/: CMakeLists.txt  test_atr_feature.cpp  test_bollinger_bands_feature.cpp  test_ema_feature.cpp  test_sma_feature.cpp
src/fitter/: CMakeLists.txt  fitter.cpp  fitter.h
src/fitter/tests/: CMakeLists.txt  test_fitter.cpp
src/helpers/: CMakeLists.txt  date_time.cpp  date_time.h  function_queue.cpp  function_queue.h  http_connection.cpp  http_connection.h  multidim_vector.h  test_data.cpp  test_data.h  vector_view.h
src/helpers/tests/: CMakeLists.txt  test_date_time.cpp  test_function_queue.cpp
src/http/: CMakeLists.txt  client.cpp  client.h
src/http/tests/: CMakeLists.txt  test_http_client.cpp
src/markets/: CMakeLists.txt  backtest_market.cpp  backtest_market.h  dummy_market.cpp  dummy_market.h  market.cpp  market.h  tinkoff_market.cpp  tinkoff_market.h
src/markets/clients/: CMakeLists.txt
src/markets/clients/tinkoff/: CMakeLists.txt  client.cpp  client.h  utils.cpp  utils.h
src/markets/tests/: CMakeLists.txt  test_backtest_market.cpp  test_tinkoff_market.cpp
src/markets/tinkoff/: CMakeLists.txt  tinkoff_api.cpp  tinkoff_api.h
src/markets/tinkoff/contracts/: CMakeLists.txt  common.proto  instruments.proto  marketdata.proto  operations.proto  orders.proto  sandbox.proto  stoporders.proto  users.proto
src/markets/tinkoff/tests/: CMakeLists.txt  test_tinkoff_api.cpp
src/plotting/: CMakeLists.txt  plotting.cpp  plotting.h
src/strategies/: CMakeLists.txt  autofit_strategy.cpp  autofit_strategy.h  averaging_strategy.cpp  averaging_strategy.h  donchain_strategy.cpp  donchain_strategy.h  dummy_strategy.cpp  dummy_strategy.h  ema_crossover_strategy.cpp  ema_crossover_strategy.h  hawkes_process_strategy.cpp  hawkes_process_strategy.h  hawks_process_strategy.cpp  hawks_process_strategy.h  macd_strategy.cpp  macd_strategy.h  open_close_strategy.cpp  open_close_strategy.h  ordinal_patterns_strategy.cpp  ordinal_patterns_strategy.h  sma_bounce_strategy.cpp  sma_bounce_strategy.h  strategy.cpp  strategy.h
src/strategies/tests/: CMakeLists.txt  test_autofit_strategy.cpp  test_averaging_strategy.cpp  test_donchain_strategy.cpp  test_dummy_strategy.cpp  test_ema_crossover_strategy.cpp  test_hawkes_process_strategy.cpp  test_hawks_process_strategy.cpp  test_macd_strategy.cpp  test_ordinal_patterns_strategy.cpp
src/traders/: CMakeLists.txt  simple_trader.cpp  simple_trader.h  sltp_trader.cpp  sltp_trader.h  trader.cpp  trader.h
src/traders/tests/: CMakeLists.txt  test_sltp_trader.cpp
test_data/: btcusdt_1h_5y.csv  data.csv  gazp_1h_3y.csv  gazp_1m_1M.csv
tests/: CMakeLists.txt  test_autofit_strategy.cpp  test_backtest_market.cpp  test_backtesting.cpp  test_dummy_market.cpp  test_dummy_strategy.cpp  test_ema_feature.cpp  test_fitter.cpp  test_macd_strategy.cpp  test_market.cpp  test_strategy.cpp
